<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Todo Simple</string>
    <string name="title_todo_detail">Todo Detail</string>
    <string name="menu_add_demo_tasks">Add demo</string>
    <string name="menu_save_task">save</string>
    <string name="menu_delete_task">delete</string>
    <string name="edit_title_hint">title</string>
    <string name="edit_description_hint">description</string>
    <string name="menu_new_task">Create new task</string>
    <string name="todo_detail_add_label_button">(+)</string>
    <string name="todo_detail_version">Version: </string>
    <string name="todo_detail_add_label">add label</string>

</resources>
