<?xml version="1.0" encoding="utf-8"?>
<name.neuhalfen.todosimple.android.view.task.DetailView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:label="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/todo_edit_title"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/edit_title_hint"
        android:inputType="text"
        android:padding="16dp" />

    <EditText
        android:id="@+id/todo_edit_description"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/todo_edit_title"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/edit_description_hint"
        android:inputType="text"
        android:padding="16dp" />


    <Button
        android:id="@+id/todo_detail_add_label_button"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/todo_edit_description"
        android:text="@string/todo_detail_add_label_button" />

    <AutoCompleteTextView
        android:id="@+id/todo_detail_add_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/todo_detail_add_label_button"
        android:layout_toLeftOf="@id/todo_detail_add_label_button"
        android:gravity="left"
        android:hint="@string/todo_detail_add_label"
        android:singleLine="true" />

    <name.neuhalfen.todosimple.android.view.label.LabelListView
        android:id="@+id/todo_detail_labels"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/todo_detail_add_label_button"
        android:layout_marginBottom="@dimen/margin_tiny"
        android:layout_marginLeft="@dimen/margin_tiny"
        android:layout_marginRight="@dimen/margin_small"
        android:minHeight="@dimen/margin_medium"
        label:labelBorderWidth="1dp" />

    <View
        android:id="@+id/todo_detail_ruler"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@id/todo_detail_labels"
        android:background="?android:textColorHighlight" />

    <TextView
        android:id="@+id/todo_detail_version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/todo_detail_ruler"
        android:text="@string/todo_detail_version"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/todo_detail_version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/todo_detail_version_label"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/todo_detail_version_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <TextView
        android:id="@+id/todo_detail_uuid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/todo_detail_version_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />


</name.neuhalfen.todosimple.android.view.task.DetailView>


